fix: remove background color from scrollbar for improved styling

--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -5,7 +5,6 @@
 ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
-    background-color: transparent;
 }
 
 nav {
